@@ -96,7 +96,7 @@ except Exception, e:
 
 # detect version option
 if "--version" in sys.argv:
-    print "[ testkit-lite v2.2.8-2 ]"
+    print "[ testkit-lite v2.2.8-3 ]"
     sys.exit(1)
 
 # get test engine, now we only got default engine
